logs/django-urlauth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/demo'...
Compiling './lib/python3.5/site-packages/demo/test.py'...
***   File "./lib/python3.5/site-packages/demo/test.py", line 18
    print 'Creating users'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/demo/urlauth'...
Listing './lib/python3.5/site-packages/demo/urlauth/management'...
Listing './lib/python3.5/site-packages/demo/urlauth/management/commands'...
Compiling './lib/python3.5/site-packages/demo/urlauth/management/commands/urlauth_cleanup.py'...
***   File "./lib/python3.5/site-packages/demo/urlauth/management/commands/urlauth_cleanup.py", line 14
    print '%d keys deleted' % count
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/demo/urlauth/migrations'...
Listing './lib/python3.5/site-packages/django_urlauth-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urlauth'...
Listing './lib/python3.5/site-packages/urlauth/management'...
Listing './lib/python3.5/site-packages/urlauth/management/commands'...
Compiling './lib/python3.5/site-packages/urlauth/management/commands/urlauth_cleanup.py'...
***   File "./lib/python3.5/site-packages/urlauth/management/commands/urlauth_cleanup.py", line 14
    print '%d keys deleted' % count
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/urlauth/migrations'...
Listing './share'...
Listing './share/python-wheels'...
